[package]
name = "cpx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
crc32fast = "1.3"
zstd = "0.13"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
anyhow = "1.0"
walkdir = "2.5"
fs_extra = "1.2"