[package]
name = "cpx"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ssh2 = "0.9"
whoami = "1.5"
zstd = "0.13"
rpassword = "7.2"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
crc32fast = "1.3"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.18"
walkdir = "2.5"
fs_extra = "1.2"
